--- a/FoodPlanner/app/src/main/res/values/strings.xml
+++ b/FoodPlanner/app/src/main/res/values/strings.xml
@@ -1,5 +1,16 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">FoodPlanner</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="signupname">Name</string>
+    <string name="emailsignup">EmailAddress</string>
+    <string name="passwordsignup">Password</string>
+    <string name="confirmpass">Confirm Password</string>
+    <string name="signbtn">Sign UP</string>
+    <string name="welcomesignup">Welcome</string>
+    <string name="client_id">615744662304-pk9n69bc2lc9b9vadn4ssds50u3hui4t.apps.googleusercontent.com</string>
+    <string name="mealname">Meal Name</string>
+    <string name="mealcountry" />
+    <string name="mealingrdent">Meal ingredients</string>
+    <string name="mealsteps" />
 </resources>
