--- a/FoodPlanner/app/src/main/res/values/strings.xml
+++ b/FoodPlanner/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">FoodPlanner</string>
+    <string name="app_name">FOODS</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="signupname">Name</string>
